src/test/ui/error-codes/E0220.stderr
error[E0220]: associated type `F` not found for `Trait`
  --> $DIR/E0220.rs:5:22
   |
LL | type Foo = dyn Trait<F=i32>;
   |                      ^^^^^ associated type `F` not found

error[E0191]: the value of the associated type `Bar` (from the trait `Trait`) must be specified
  --> $DIR/E0220.rs:5:12
   |
LL |     type Bar;
   |     --------- `Bar` defined here
...
LL | type Foo = dyn Trait<F=i32>;
   |            ^^^^^^^^^^^^^^^^ associated type `Bar` must be specified

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0191, E0220.
For more information about an error, try `rustc --explain E0191`.
